[gd_scene load_steps=17 format=3 uid="uid://bfdq63cjmvi6f"]

[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_al1ji"]
[ext_resource type="PackedScene" uid="uid://clw4b1va66fjh" path="res://Scenes/Ball.tscn" id="2_0j8vj"]
[ext_resource type="PackedScene" uid="uid://dqjl3uoweaqwx" path="res://Scenes/Background.tscn" id="3_kakct"]
[ext_resource type="Shader" path="res://Shaders/line_shader.gdshader" id="4_kt8rx"]
[ext_resource type="Texture2D" uid="uid://bh70d10lr5w07" path="res://Assets/Particles/Line_wool.png" id="4_mewtj"]
[ext_resource type="PackedScene" path="res://Scenes/Goal.tscn" id="6_kj8he"]
[ext_resource type="Texture2D" uid="uid://dub8kg7hvj07v" path="res://Assets/Cursors/check_round_round_circle.png" id="7_7ay8l"]
[ext_resource type="Texture2D" uid="uid://c5dggiolhmtun" path="res://Assets/Menu/Item3.png" id="8_husda"]
[ext_resource type="Texture2D" uid="uid://s0f35blav7cs" path="res://Assets/Cursors/target_a.png" id="8_liygq"]
[ext_resource type="Texture2D" uid="uid://ckduc8s06sd16" path="res://Assets/Menu/Icon_Home.png" id="8_myapc"]
[ext_resource type="Texture2D" uid="uid://bj6w282k54hg2" path="res://Assets/Menu/Icon_Return.png" id="9_4ydcg"]
[ext_resource type="FontFile" uid="uid://drsbesnuxws12" path="res://Assets/Font/MilkyNice.ttf" id="11_2eyv1"]
[ext_resource type="Texture2D" uid="uid://6rto6oml2i0" path="res://Assets/Menu/Icon_Exit.png" id="11_cl376"]
[ext_resource type="Texture2D" uid="uid://cn0fwy51byrhl" path="res://Assets/Menu/Icon_X.png" id="12_i65r0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kerx0"]
shader = ExtResource("4_kt8rx")
shader_parameter/scrolling_speed = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_4g28v"]

[node name="Level" type="Node2D"]
script = ExtResource("1_al1ji")
ball_scene = ExtResource("2_0j8vj")

[node name="Background" parent="." instance=ExtResource("3_kakct")]

[node name="BallTracker" type="Line2D" parent="."]
top_level = true
material = SubResource("ShaderMaterial_kerx0")
points = PackedVector2Array(449, 247)
width = 15.0
texture = ExtResource("4_mewtj")
texture_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 0.0
round_precision = 1
antialiased = true

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2(-34, 221)
rotation = 1.58076

[node name="MeshInstance2D" type="MeshInstance2D" parent="wall"]
visible = false
modulate = Color(0.161572, 0.222491, 0.359931, 1)
position = Vector2(-153.361, 0)
scale = Vector2(133.778, 50.5)
mesh = SubResource("QuadMesh_4g28v")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="wall"]
visible = false
position = Vector2(5.00972, 0.950133)
polygon = PackedVector2Array(34.6495, -35.347, 1058.61, -44.5497, 1051.43, -764.514, -233.511, -752.711, -226.338, -32.7465, 34.6495, -35.347, 34.9584, -4.34852, -255.027, -1.4591, -262.998, -801.419, 1088.95, -812.89, 1101.94, -11.9797, 34.9584, -4.34852)
disabled = true

[node name="Goal" parent="." instance=ExtResource("6_kj8he")]
position = Vector2(363, 975)

[node name="Markers" type="Node2D" parent="."]
visible = false

[node name="Marker Spawn" type="TextureRect" parent="Markers"]
custom_minimum_size = Vector2(80, 80)
offset_left = 161.0
offset_top = 735.0
offset_right = 241.0
offset_bottom = 815.0
pivot_offset = Vector2(40, 40)
texture = ExtResource("7_7ay8l")

[node name="Marker Goals" type="TextureRect" parent="Markers"]
visible = false
offset_left = 93.0
offset_top = 100.0
offset_right = 157.0
offset_bottom = 164.0
pivot_offset = Vector2(32, 32)
texture = ExtResource("8_liygq")

[node name="Balls" type="Node2D" parent="."]

[node name="Walls" type="Node2D" parent="."]

[node name="UI" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="Label level" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.5
offset_top = 16.0
offset_right = 57.5
offset_bottom = 72.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("11_2eyv1")
theme_override_font_sizes/font_size = 51
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label hint" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_2eyv1")
theme_override_font_sizes/font_size = 51
autowrap_mode = 3

[node name="Pause" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -107.0
offset_top = 16.0
offset_right = -95.0
offset_bottom = 32.0
grow_horizontal = 0
scale = Vector2(7.36, 6.48)
mouse_force_pass_scroll_events = false
texture_normal = ExtResource("8_myapc")
ignore_texture_size = true
stretch_mode = 0

[node name="Pause Menu" type="NinePatchRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -203.0
offset_right = 245.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_husda")
region_rect = Rect2(0, 0, 922, 813)
patch_margin_left = 84
patch_margin_top = 138
patch_margin_right = 81
patch_margin_bottom = 122

[node name="Restart" type="TextureButton" parent="UI/Pause Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -40.0
offset_right = 144.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("9_4ydcg")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="Label" type="Label" parent="UI/Pause Menu/Restart"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.5
offset_right = 83.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_2eyv1")
theme_override_font_sizes/font_size = 47
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="UI/Pause Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -40.0
offset_right = -61.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("11_cl376")
ignore_texture_size = true
stretch_mode = 0

[node name="Label2" type="Label" parent="UI/Pause Menu/Quit"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.5
offset_right = 83.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_2eyv1")
theme_override_font_sizes/font_size = 47
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="TextureButton" parent="UI/Pause Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = 66.0
grow_horizontal = 0
pivot_offset = Vector2(32, 32)
texture_normal = ExtResource("12_i65r0")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="UI/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="UI/Pause Menu/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/Pause Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Pause Menu/Close" to="." method="_on_close_pressed"]
